Adds Navigation component * Adds folders for Alert and layout * Adds left sidebar and sidebar width vars * Updates sass-lint rules

--- a/src/styles/base/_elements.scss
+++ b/src/styles/base/_elements.scss
@@ -7,21 +7,10 @@
 }
 
 a,
-a:visited { text-decoration: none; }
+a:visited {
+    text-decoration: none;
+}
 
-// a:hover {}
-
-// ul {}
-// ol {}
-
-img { max-width: 100%; }
-
-// p {}
-// mark {}
-// del {}
-// s {}
-// ins {}
-// u {}
-// small {}
-// strong {}
-// em {}
+img {
+    max-width: 100%;
+}
