--- a/src/styles/helpers/_vars.scss
+++ b/src/styles/helpers/_vars.scss
@@ -1,21 +1,31 @@
 // ---------------------------------------------------------------------
-//    Variables
+// VARIABLES
 // ---------------------------------------------------------------------
-/* Colors */
-$COLOR_PRIMARY: #0066cc; //#a3c8e1;
-$COLOR_SECONDARY: #2d9fe9;
-
-/* Misc Colors */
-$COLOR_MID_GREY: #999999;
-$COLOR_ALERT: #b81818;
-// ------------------------------------------------------------------------
-// Site Variables
-// ------------------------------------------------------------------------
+// ---------------------------------------------------------------------
+// SPACING
+// ----------------------------------------------------------------------
 $SCREEN_WIDTH_SM: 328px;
 $SCREEN_WIDTH_MD: 767px;
 $SCREEN_WIDTH_LG: 1027px;
 
+$VERTICAL_SPACING_1X: 24px;
+
+$HORIZONTAL_SPACING_1X: 12px;
+
+$SIDEBAR_WIDTH_EXPANDED: 230px;
+$SIDEBAR_WIDTH_COLLAPSED: 60px;
+
+// ---------------------------------------------------------------------
+// COLORS
+// ---------------------------------------------------------------------
+// theme
+$COLOR_PRIMARY: #0066cc; //#a3c8e1;
+$COLOR_SECONDARY: #2d9fe9;
+
+// secondary
+$COLOR_MID_GREY: #999999;
+$COLOR_ALERT: #b81818;
+
 // ------------------------------------------------------------------------
 // Icons
 // ------------------------------------------------------------------------
-
