Adds Sidebar * Begins move to better file structures

--- a/src/styles/_screen_md.scss
+++ b/src/styles/_screen_md.scss
@@ -2,6 +2,7 @@
 // Landmarks
 // ---------------------------------------------------------------------
 @import 'landmarks/page';
+@import 'landmarks/sidebar';
 
 // ---------------------------------------------------------------------
 // Modules
