--- a/src/styles/helpers/_vars.scss
+++ b/src/styles/helpers/_vars.scss
@@ -12,8 +12,8 @@ $VERTICAL_SPACING_1X: 24px;
 
 $HORIZONTAL_SPACING_1X: 12px;
 
-$SIDEBAR_WIDTH_EXPANDED: 230px;
-$SIDEBAR_WIDTH_COLLAPSED: 60px;
+$SIDEBAR_WIDTH_EXPANDED: 240px;
+$SIDEBAR_WIDTH_COLLAPSED: 80px;
 
 // ---------------------------------------------------------------------
 // COLORS
@@ -21,6 +21,15 @@ $SIDEBAR_WIDTH_COLLAPSED: 60px;
 // theme
 $COLOR_PRIMARY: #0066cc; //#a3c8e1;
 $COLOR_SECONDARY: #2d9fe9;
+
+// https://dribbble.com/shots/218427-Ui-Elements-Free-PSD
+// #a7a7a7
+// #a3c0d3
+// #5ca4d3
+// #4287b5
+// #6a67f2
+// #31719b
+// #ef4a39
 
 // secondary
 $COLOR_MID_GREY: #999999;
