--- a/src/styles/modules/wrapper/_wrapper_sm.scss
+++ b/src/styles/modules/wrapper/_wrapper_sm.scss
@@ -2,5 +2,5 @@
 // Wrapper - Small
 // ---------------------------------------------------------------------
 .wrapper {
-    padding: 10px;
+    @include wrapper
 }
