--- a/src/styles/helpers/_vars.scss
+++ b/src/styles/helpers/_vars.scss
@@ -8,7 +8,10 @@ $SCREEN_WIDTH_SM: 328px;
 $SCREEN_WIDTH_MD: 767px;
 $SCREEN_WIDTH_LG: 1027px;
 
-$VERTICAL_SPACING_1X: 24px;
+$VERTICAL_SPACING_1X: 12px;
+$VERTICAL_SPACING_2X: $VERTICAL_SPACING_1X * 2;
+$VERTICAL_SPACING_3X: $VERTICAL_SPACING_1X * 3;
+$VERTICAL_SPACING_4X: $VERTICAL_SPACING_1X * 4;
 
 $HORIZONTAL_SPACING_1X: 12px;
 
