--- a/src/styles/landmarks/_page.scss
+++ b/src/styles/landmarks/_page.scss
@@ -3,7 +3,7 @@
 // ------------------------------------------------------------------------
 .page {
     background-color: #fefffd;
-    font-size: $BASE_FONT_SIZE;
+    font-size: $FONT_SIZE_1X;
     font-family: $FONT;
     letter-spacing: 1px;
     line-height: 1.2;
