--- a/src/styles/modules/blocks/_blocks.scss
+++ b/src/styles/modules/blocks/_blocks.scss
@@ -10,7 +10,7 @@
     display: inline-block;
     padding: 20px 0 0 20px;
     vertical-align: top;
-    font-size: $BASE_FONT_SIZE;
+    font-size: $FONT_SIZE_1X;
     box-sizing: border-box;
 }
 
