--- a/src/styles/modules/input/_input.scss
+++ b/src/styles/modules/input/_input.scss
@@ -8,7 +8,7 @@
     padding-left: 10px;
     border: 1px solid #222222;
     border-radius: 2px;
-    font-size: $BASE_FONT_SIZE;
+    font-size: $FONT_SIZE_1X;
 }
 
 .input-sm {
