Adds basic styles and classes to sidebar * Adds placeholder for Alert/Flash component in ClientList

--- a/src/styles/_screen_md.scss
+++ b/src/styles/_screen_md.scss
@@ -3,6 +3,7 @@
 // ---------------------------------------------------------------------
 @import 'landmarks/page';
 @import 'landmarks/sidebar';
+@import 'landmarks/navigation';
 
 // ---------------------------------------------------------------------
 // Modules
