--- a/src/styles/landmarks/_sidebar.scss
+++ b/src/styles/landmarks/_sidebar.scss
@@ -1,6 +1,16 @@
 // ------------------------------------------------------------------------
 // Sidebar
 // ------------------------------------------------------------------------
+@mixin sidebar-action-bar {
+    width: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #303030;
+    color: #ededed;
+    border: 0;
+    cursor: pointer;
+}
+
 .sidebar {
     width: $SIDEBAR_WIDTH_EXPANDED;
     position: fixed;
@@ -8,25 +18,30 @@
     bottom: 0;
     left: 0;
     overflow: hidden;
+    text-align: center;
+    background-color: #606060;
     white-space: nowrap;
 
     @include base-transition;
-    @include wrapper;
 }
 
-.sidebar-trigger {
+.sidebar-hd > button {
+    @include sidebar-action-bar;
+}
+
+// .sidebar-bd {}
+
+.sidebar-ft {
     position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: #cccccc; // TODO: replace with theme color
 }
 
-.sidebar-trigger > button {
-    padding: 15px 39%;
-    background-color: #cccccc;
-    border: 0;
+// .sidebar-trigger {}
 
+.sidebar-trigger > button {
+    @include sidebar-action-bar;
     @include base-transition;
 }
 
