Adds Table component for specific ClientList implementation

--- a/src/styles/_screen_md.scss
+++ b/src/styles/_screen_md.scss
@@ -18,6 +18,7 @@
 @import 'modules/link/link';
 @import 'modules/media/media';
 @import 'modules/tab/tab';
+@import 'modules/table/table';
 @import 'modules/txt/txt';
 @import 'modules/vlist/vlist';
 @import 'modules/vr/vr';
