--- a/src/styles/helpers/_vars.scss
+++ b/src/styles/helpers/_vars.scss
@@ -35,9 +35,10 @@ $COLOR_SECONDARY: #2d9fe9;
 // #4287b5
 // #6a6f72
 // #31719b
-// #ef4a39
+// #e4da39
 
 // secondary
+$COLOR_GREY_239: #efefef;
 $COLOR_MID_GREY: #999999;
 $COLOR_ALERT: #b81818;
 
