Updates layout in CLientSingle * Updates pading in .btn * Updates height in .page

--- a/src/styles/landmarks/_page.scss
+++ b/src/styles/landmarks/_page.scss
@@ -12,7 +12,7 @@
 // .page-hd {}
 
 .page-bd {
-    height: 100vh;
+    height: 100%;
     margin-left: $SIDEBAR_WIDTH_EXPANDED;
     background-color: $COLOR_GREY_239;
 
