Adds minor style changes throught app.

--- a/src/styles/_screen_md.scss
+++ b/src/styles/_screen_md.scss
@@ -17,6 +17,7 @@
 @import 'modules/input/input';
 @import 'modules/link/link';
 @import 'modules/media/media';
+@import 'modules/pageTitle/pageTitle';
 @import 'modules/tab/tab';
 @import 'modules/table/table';
 @import 'modules/txt/txt';
