Adds Table and FlashMessage components to ProjectTypes * Rearranges table column order for Clients * Updates icon for TaskItems

--- a/src/styles/modules/table/_table.scss
+++ b/src/styles/modules/table/_table.scss
@@ -28,7 +28,7 @@ tbody > tr:hover {
 }
 
 td {
-    padding: 13px 13px;
+    padding: 16px;
     border-bottom: 3px solid #f0f0f0;
     font-size: 12px;
 }
