--- a/src/styles/modules/alert/_alert.scss
+++ b/src/styles/modules/alert/_alert.scss
@@ -17,7 +17,7 @@
     border-color: #d6e9c6;
 }
 
-.alert-caution {
+.alert-wraning {
     color: #4c4a42;
     background-color: #fff9ea;
     border-color: #dfd8c2;
