Adds SessionContainer in preperation for login component * Adds gear icon link for future Dashboard

--- a/src/styles/landmarks/_sidebar.scss
+++ b/src/styles/landmarks/_sidebar.scss
@@ -25,9 +25,15 @@
     @include base-transition;
 }
 
+// .sidebar-hd {}
+
 .sidebar-hd > button {
     @include sidebar-action-bar;
 }
+
+// .sidebar-hd > a {
+//     color: inherit;
+// }
 
 // .sidebar-bd {}
 
