Adds messaging to client save action * Adds .wrapper to clientSingle component and removes margin from .tab

--- a/src/styles/modules/tab/_tab.scss
+++ b/src/styles/modules/tab/_tab.scss
@@ -1,10 +1,10 @@
 // ---------------------------------------------------------------------
 // Tabs
 // ---------------------------------------------------------------------
-.tab {
-    margin-right: $HORIZONTAL_SPACING_1X;
-    margin-left: $HORIZONTAL_SPACING_1X;
-}
+// .tab {
+//     margin-right: $HORIZONTAL_SPACING_1X;
+//     margin-left: $HORIZONTAL_SPACING_1X;
+// }
 
 .tab-hd {
     background-color: #ffffff;
