Adds additional dispatch to get taskItems when getting a single project type * Adds sub form to select task items to add or remove from a project type * Updates input styles for checkbox

--- a/src/styles/modules/input/_input.scss
+++ b/src/styles/modules/input/_input.scss
@@ -20,6 +20,11 @@ input {
     border: 1px solid #cccccc;
 }
 
+input[type=checkbox],
+input[type=radio] {
+    min-width: auto;
+}
+
 input[type=date]::-webkit-inner-spin-button,
 input[type=date]::-webkit-clear-button {
     -webkit-appearance: none;
